# ChangeLog for net-analyzer/rrdtool
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.165 2008/12/07 12:19:44 vapier Exp $

  07 Dec 2008; Mike Frysinger <vapier@gentoo.org> rrdtool-1.3.4.ebuild:
  Add back s390 #228025.

  29 Nov 2008; Peter Volkov <pva@gentoo.org>
  -files/rrdtool-1.2.23-ruby-binding-compile.patch,
  -files/rrdtool-1.2.23-ruby-binding-configure.patch,
  -files/rrdtool-1.2.23-tclbindings.patch, -rrdtool-1.2.23-r1.ebuild,
  -rrdtool-1.2.27.ebuild, -rrdtool-1.2.27-r1.ebuild, -rrdtool-1.2.28.ebuild:
  Clean old.

  26 Nov 2008; Brent Baude <ranger@gentoo.org> rrdtool-1.2.28-r1.ebuild:
  Marking rrdtool-1.2.28-r1 ppc64 for bug 245331

  08 Nov 2008; Raúl Porcel <armin76@gentoo.org> rrdtool-1.2.28-r1.ebuild:
  alpha/ia64/x86 stable wrt #245331

  08 Nov 2008; nixnut <nixnut@gentoo.org> rrdtool-1.2.28-r1.ebuild:
  Stable on ppc wrt bug 245331

*rrdtool-1.2.28-r2 (08 Nov 2008)

  08 Nov 2008; Peter Volkov <pva@gentoo.org>
  +files/rrdtool-1.2.28-fix-empty-font.patch, +rrdtool-1.2.28-r2.ebuild:
  Patch from upstream to fix empty font files, thank Tobias Oetiker for this
  patch.

  07 Nov 2008; Jeroen Roovers <jer@gentoo.org> rrdtool-1.2.28-r1.ebuild:
  Stable for HPPA (bug #245331).

  06 Nov 2008; Thomas Anderson <gentoofan23@gentoo.org>
  rrdtool-1.2.28-r1.ebuild:
  stable amd64, regression from 1.2.28. See bug #245331

  06 Nov 2008; Ferris McCormick <fmccor@gentoo.org>
  rrdtool-1.2.28-r1.ebuild:
  Sparc stable --- Bug #245331 --- fix regression error.

*rrdtool-1.2.28-r1 (04 Nov 2008)

  04 Nov 2008; Peter Volkov <pva@gentoo.org>
  +files/rrdtool-1.2.28-revert-font-fix.patch, +rrdtool-1.2.28-r1.ebuild,
  -rrdtool-1.3.3.ebuild:
  Revert upstream changes that cause broken graphs in cacti, bug #245331,
  thank Thomas Beutin for report and fleg for tests. Remove unused.

  28 Oct 2008; Brent Baude <ranger@gentoo.org> rrdtool-1.2.28.ebuild: