@@ -1,6 +1,13 @@
 # ChangeLog for net-analyzer/rrdtool
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.165 2008/12/07 12:19:44 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.166 2008/12/21 17:53:14 pva Exp $
+
+*rrdtool-1.3.5 (21 Dec 2008)
+*rrdtool-1.2.29 (21 Dec 2008)
+
+  21 Dec 2008; Peter Volkov <pva@gentoo.org> +rrdtool-1.2.29.ebuild,
+  +rrdtool-1.3.5.ebuild:
+  Version bump.
 
   07 Dec 2008; Mike Frysinger <vapier@gentoo.org> rrdtool-1.3.4.ebuild:
   Add back s390 #228025.
